--- a/_config.preview.yml
+++ b/_config.preview.yml
@@ -1,5 +1,5 @@
-baseurl: '/Preview/HVWorkout'
-url: 'https://hvboom.org'
+baseurl: '/HVWorkout'
+url: 'https://preview.hvboom.org'
 source: '/home/jekyll/Projects/HVWorkout'
 destination: '/home/jekyll/Preview/HVWorkout'
 profile: true
